fix white space at bottom of footer

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1758,7 +1758,7 @@ header p {
   z-index: 99;
   left: 0;
   right: 6%;
-  height: 53px;
+  height: 57px;
   position: relative;
   color: #fff;
   padding: 20px;
